# remote-ac

./: Dockerfile  README.md  main.py  pyproject.toml
nodemcu/: IRDump.txt  nodemcu.ino
src/: api.py  config.py  model.py  orm.py  task.py
static/: index.html
